--- a/blueprints/ikea_e2001_e2002.yaml
+++ b/blueprints/ikea_e2001_e2002.yaml
@@ -560,9 +560,8 @@ action:
               - conditions: '{{ button_right_long_loop }}'
                 sequence:
                   - repeat:
+                      delay: '00:00:0.3'
                       while: '{{ repeat.index < button_right_long_max_loop_repeats | int }}'
-                      - delay:
-                        milliseconds: 500
                       sequence: !input action_button_right_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_right_long
@@ -645,9 +644,8 @@ action:
               - conditions: '{{ button_up_long_loop }}'
                 sequence:
                   - repeat:
+                      delay: '00:00:0.3'
                       while: '{{ repeat.index < button_up_long_max_loop_repeats | int }}'
-                      - delay:
-                        milliseconds: 500
                       sequence: !input action_button_up_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_up_long
@@ -730,9 +728,8 @@ action:
               - conditions: '{{ button_down_long_loop }}'
                 sequence:
                   - repeat:
+                      delay: '00:00:0.3'
                       while: '{{ repeat.index < button_down_long_max_loop_repeats | int }}'
-                      - delay:
-                        milliseconds: 500
                       sequence: !input action_button_down_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_down_long
